--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,15 @@
 // Colors
+$dark-blue: #364051;
+$blue: #1c88bf;
+$dark-grey: #333;
+$grey: #666;
+$white: #fff;
+$off-white: #f7f7f7;
+
+//Font size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
+
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
